--- a/src/animations.css
+++ b/src/animations.css
@@ -149,9 +149,12 @@
 }
 
 .page-enter-done {
-  position: static;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   opacity: 1;
-  z-index: auto;
+  z-index: 1;
 }
 
 .page-exit {
